자바스크립트, HTML&CSS 예제 실습

--- a/webwork/day0831/ex1_변수선언.html
+++ b/webwork/day0831/ex1_변수선언.html
@@ -24,7 +24,8 @@
         //자바스크립트에서는 작은 따옴표와(') 큰따옴표가(") 의미가 같다.
         //따옴표 안에 따옴표를 넣을경우 서로 교차되도록 넣어주면 된다.
         document.write("<img alt='사진1' src='"+s1+"' width=200>")//ES5 문법 
-        document.write(`<img alt='사진2' src="${s2}" width=200>`)//ES6 문법 
+        document.write(`<img alt='사진2' src="${s2}" width=200>`)//ES6 문법, ${변수}를 이용하면 훨씬 편하게 할 수 있다.
+
     </script>
 </body>
 </html>
