--- a/webwork/day0905/myPr0905/ex2_날짜출력.html
+++ b/webwork/day0905/myPr0905/ex2_날짜출력.html
@@ -44,7 +44,7 @@
             //년도
             let year = date.getFullYear();
             //월
-            let month = date.getMonth();
+            let month = date.getMonth()+1; // 0부터11까지라 +1 해야함
             //일
             let day = date.getDate();
             //시간
