--- a/javawork/ProjectJavascript/src/main/webapp/day1005/ex01_font_storage.html
+++ b/javawork/ProjectJavascript/src/main/webapp/day1005/ex01_font_storage.html
@@ -23,7 +23,7 @@
 			let fname = document.getElementById("selfont").value;
 			let fsize = document.getElementById("selsize").value;
 			//적용 
-			//클래스. 아이디#, 부등호 표시 등 다 해줘야한다.
+			//클래스. 아이디#, 부등호 표d시 등 다 해줘야한다.
 			let m = document.querySelector(".message");
 			m.style.color = fcolor;
 			m.style.backgroundColor = bcolor;
