--- a/javawork/ProjectJavascript/src/main/webapp/day1006/ex10_jsonRead.html
+++ b/javawork/ProjectJavascript/src/main/webapp/day1006/ex10_jsonRead.html
@@ -32,10 +32,10 @@
 <script>
 		$(function(){
 			let arr = [
-				{sname:"모자", photo:"../shop/23.jpg",color:["orange","gray","blue"],price:10000},
-				{sname:"머리띠", photo:"../shop/30.jpg",color:["yellow","green","magenta","black"],price:17000},
-				{sname:"신발", photo:"../shop/14.jpg",color:["#ffb6c1","#90ee90","#87cefa","#ff69b4"],price:35000},
-				{sname:"자켓", photo:"../shop/31.jpg",color:["pink","tomato","lime"],price:56000}
+				{sname:"모자", photo:"../image/2.jpg",color:["orange","gray","blue"],price:10000},
+				{sname:"머리띠", photo:"../image/10.jpg",color:["yellow","green","magenta","black"],price:17000},
+				{sname:"신발", photo:"../image/14.jpg",color:["#ffb6c1","#90ee90","#87cefa","#ff69b4"],price:35000},
+				{sname:"자켓", photo:"../image/19.jpg",color:["pink","tomato","lime"],price:56000}
 			
 			] // 배열 끝
 			
