--- a/javawork/ProjectJavascript/src/main/webapp/day1010/ex01_formtag.html
+++ b/javawork/ProjectJavascript/src/main/webapp/day1010/ex01_formtag.html
@@ -138,7 +138,7 @@
 								 //let t = $(".mysel2 option:selected").text();
 								 let t = $("option:selected", this).text();
 								 //다음 td 에 이미지 넣기
-								$(this).parent().next().html(`<img src="${v}" width="300">`);
+								$(this).parent().next().html(`<img src="${v}" width="300"><br><b>${t}</b>`);
 							 });
 						 </script>
 					 </td>
